# luca

./: .gitignore  2016-03 ManagementAccounts.xlsm  CreateReports00.ipynb  CreateReports01.ipynb  CreateReports02 (code in modules).ipynb  Current Accounting.pod  DB Check and corrections.ipynb  Extract Sage to Management Conversion table.ipynb  Freeagent to Ledger.ipynb  LICENSE  Management Report 2016-04-10T15_37_30.xlsx  Management accounts.md  Pickle Save and Load Sage Data.ipynb  Preparing Management accounts.ipynb  README.md  Step 0 - Creating database.ipynb  Transactional trial balance.ipynb  UnPickle Sage Data and create TTB.ipynb  UnPickle Sage Data and test accruals.ipynb  account.go  account.go.todo  amount.go.todo  commodity.go  commodity.go.todo  commodity_test.go  company-export-2016-04-07-05-55.xls  directive.go  directiveHeader.go  directiveHeader_test.go  first.ledger  go.mod  go.sum  historic_trial_balances.db  journal.go  journal2_test.go  journal_test.go  ledger.go  ledger_file_test.go  o.bat  parser.go.todo  (+6 more)
luca/: __init__.py  chart_of_accounts.py  coa_sqlite.py  core.py  excel_report.py  excel_report2.py  get_sage.py  journal_entry.py  journal_sqlite.py  metadata.py  page_fy_accts.py  page_mangement_accounts.py  page_slf_mgmt.py  period_report.py  period_report2.py  tax_uk.py  transactional_trial_balance.py  trial_balance.py  trial_balance_conversion.py  utils.py
notes/: Introduction.ipynb  Untitled.ipynb  ledger1.txt
tests/: chart_of_accounts.sql  fy_detail_chart_of_accounts.sql  fy_summary_chart_of_accounts.sql  sage_chart_of_accounts.sql  (+12 more)
(+32 files in other folders)
