[tool.poetry]
name = "luca"
version = "0.1.0"
description = "Simple accounting experimens"
authors = ["drummonds <hum3@drummond.info>"]

[tool.poetry.dependencies]
python = "^3.8"

[tool.poetry.dev-dependencies]
jupyterlab = "^3.4.5"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
